hphp/hack/test/typecheck/tconst/interface2.php.exp
File "interface2.php", line 10, characters 11-11:
Class I does not correctly implement all required members  (Typing[4340])
File "interface2.php", line 10, characters 25-26:
Some members are incompatible with those declared in type I2
Read the following to see why:
File "interface2.php", line 10, characters 11-11:
Class I does not correctly implement all required members 
File "interface2.php", line 10, characters 25-26:
Some members are incompatible with those declared in type I2
Read the following to see why:
File "interface2.php", line 4, characters 23-23:
The constraint on this type constant is inconsistent with its parent
File "interface2.php", line 7, characters 28-35:
Expected arraykey
File "interface2.php", line 4, characters 28-32:
But got mixed
File "interface2.php", line 4, characters 23-23:
This declaration was inherited from an object of type I1. Redeclare this member in I with a compatible signature.
